new fragment added (promote details)

--- a/IndiabanaApp/app/src/main/res/values/strings.xml
+++ b/IndiabanaApp/app/src/main/res/values/strings.xml
@@ -436,5 +436,7 @@
     <string name="stock4">Limited stock (1 unit)</string>
     <string name="percent4">20% of the sale price</string>
     <string name="ready_to_sale">Great! Get ready to sell.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--  My Account  -->
 </resources>
