activity_alliance_request_temp and activity_potential_alliances_item bottom updated

--- a/IndiabanaApp/app/src/main/res/values-es/strings.xml
+++ b/IndiabanaApp/app/src/main/res/values-es/strings.xml
@@ -288,6 +288,7 @@
     <string name="you_qualify_to_make_this_delivery">Calificas para hacer esta entrega</string>
     <string name="products">Productos</string>
     <string name="price_txt">Precio:</string>
+    <string name="price_txt_2">Precio venta:</string>
     <string name="features">Características</string>
     <string name="color">Color:</string>
     <string name="capacity">Capacidad:</string>
