--- a/IndiabanaApp/app/src/main/res/values/strings.xml
+++ b/IndiabanaApp/app/src/main/res/values/strings.xml
@@ -455,5 +455,7 @@
     <string name="the_product_does_not_match_the_published">The product does not match the published</string>
     <string name="the_product_is_defective">The product is defective</string>
     <string name="write_here_the_problem_with_your_purchase">Write here the problem with your purchase</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
