--- a/IndiabanaApp/app/src/main/res/values/strings.xml
+++ b/IndiabanaApp/app/src/main/res/values/strings.xml
@@ -455,7 +455,12 @@
     <string name="the_product_does_not_match_the_published">The product does not match the published</string>
     <string name="the_product_is_defective">The product is defective</string>
     <string name="write_here_the_problem_with_your_purchase">Write here the problem with your purchase</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="excellent_your_opinion_has_been_published">Excellent! Your opinion has been published.</string>
+    <string name="do_you_want_to_add_a_tip">Do you want to add a tip?</string>
+    <string name="no_thanks">No, thanks</string>
+    <string name="yes_tip">Yes, tip</string>
+    <string name="leave_your_tip_for">Leave your tip for</string>
+    <string name="tipping">Dar propina</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
